Participate: fix outer spacings on small screens

--- a/src/components/participate/style.scss
+++ b/src/components/participate/style.scss
@@ -2,7 +2,10 @@
 @import "../../variables";
 
 .participate {
+  padding-top: 1.5rem;
+
   @include mq($from: desktop) {
+    padding-top: 0;
     position: sticky;
     top: 0.5rem;
   }
